--- a/ask.html
+++ b/ask.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="fr" data-theme="light" class="bg-mandy-50">
 <head>
-	<title>BOOO!</title> <!-- Remember to change title -->
+	<title>SAY YES :D</title> <!-- Remember to change title -->
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="noindex">
