--- a/ask.html
+++ b/ask.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="fr" data-theme="light" class="bg-mandy-50">
 <head>
-	<title>SAY YES :D</title> <!-- Remember to change title -->
+	<title>PLEASE HIT THE GREEN BUTTON :D</title> <!-- Remember to change title -->
 	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="noindex">
@@ -43,7 +43,7 @@
 		function yes(){
 			document.getElementById("mainGif").src = "./img/happy2.gif"
 			document.getElementById("buttons").remove()
-			document.getElementById("mainText").innerText = "WooHoo!! So what day shall we go?" //Write smtg here as message//
+			document.getElementById("mainText").innerText = "WooHoo!! We can go on a day you're free!" //Write smtg here as message//
 			
 			vibrate(300)
 
