--- a/slide.html
+++ b/slide.html
@@ -15,12 +15,12 @@
     </div>
 
     <div class="mySlides fade">
-        <figcaption>Hope you're alive and not drowning in lecture debt :P</figcaption>
+        <figcaption>Hope you're not drowning in lecture debt, like me :P</figcaption>
         <img src="./img/drown.gif" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <figcaption>I've always wondered...</figcaption>
+        <figcaption>I've a question for you!</figcaption>
         <img src="./img/question1.gif" style="width:100%">
     </div>
 
@@ -35,12 +35,12 @@
     </div>
 
     <div class="mySlides fade">
-        <figcaption>What I wanted to ask is...</figcaption>
+        <figcaption>What I wanted to really ask is...</figcaption>
         <img src="./img/question2.gif" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <figcaption>I know you are very very very busy</figcaption>
+        <figcaption>I know that you are very very very busy</figcaption>
         <img src="./img/busy.gif" style="width:100%">
     </div>
 
