--- a/ask.html
+++ b/ask.html
@@ -100,7 +100,7 @@
 	<div>
 		<img id="mainGif" src="" alt="Illustration" class="mx-auto w-48 h-48" />
 
-		<h3 id="mainText" class="mt-6 py-1 px-4 text-mandy-400 hover:text-mandy-500 ease-in transition text-3xl leading-10 font-semibold">If you would like to go watch Nezha 2 with me? :P</h3>
+		<h3 id="mainText" class="mt-6 py-1 px-4 text-mandy-400 hover:text-mandy-500 ease-in transition text-3xl leading-10 font-semibold">If you would like to watch Nezha 2 with me? :P</h3>
 		
 		<div id="buttons" class="mt-8 space-x-3 space-y-3">
 			<div class="button-container">
