--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </div>
             <div class="input-group">
                 <label for="password">Password:</label>
-                <input type="text" id="password" name="password" required placeholder="Your Birthday">
+                <input type="text" id="password" name="password" required placeholder="When's Your Birthday">
             </div>
             <button type="submit" class="login-button" onclick="location.href='slide.html'">Login</button>
         </form>
