--- a/ask.html
+++ b/ask.html
@@ -1,4 +1,4 @@
-<!doctype html>
+n do<!doctype html>
 <html lang="fr" data-theme="light" class="bg-mandy-50">
 <head>
 	<title>PLEASE HIT THE GREEN BUTTON :D</title> <!-- Remember to change title -->
@@ -98,9 +98,11 @@
 </head>
 <body class="bg-mandy-50 absolute inset-0 items-center justify-center text-center font-['Poppins']" style="display: none;">
 	<div>
+		<h3 id="mainText" class="mt-6 py-1 px-4 text-mandy-400 hover:text-mandy-500 ease-in transition text-3xl leading-10 font-semibold">If you would like to watch Nezha 2 with me? :P</h3>
+		
 		<img id="mainGif" src="" alt="Illustration" class="mx-auto w-48 h-48" />
 
-		<h3 id="mainText" class="mt-6 py-1 px-4 text-mandy-400 hover:text-mandy-500 ease-in transition text-3xl leading-10 font-semibold">If you would like to watch Nezha 2 with me? :P</h3>
+		<h3 id="mainText" class="mt-6 py-1 px-4 text-mandy-400 hover:text-mandy-500 ease-in transition text-3xl leading-10 font-semibold">We can also do something else if you want ;D</h3>
 		
 		<div id="buttons" class="mt-8 space-x-3 space-y-3">
 			<div class="button-container">
