--- a/ask.html
+++ b/ask.html
@@ -1,4 +1,4 @@
-n do<!doctype html>
+<!doctype html>
 <html lang="fr" data-theme="light" class="bg-mandy-50">
 <head>
 	<title>PLEASE HIT THE GREEN BUTTON :D</title> <!-- Remember to change title -->
